# seen-e-rl

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  evaluate.py  main.py  pyproject.toml  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rfc.md
.github/workflows/: ci.yml  evals.yml
algorithms/: README.md  __init__.py
algorithms/ppo/: __init__.py  assembly.py  config.py  defaults.py  learner.py
algorithms/sac/: __init__.py  assembly.py  config.py  defaults.py  learner.py
algorithms/td3/: __init__.py  assembly.py  config.py  defaults.py  learner.py
algorithms/template/: __init__.py
configs/: README.md  default.yaml  isaaclab_pickplace_base.yaml  isaaclab_pickplace_obac.yaml  isaaclab_pickplace_ppo.yaml  isaaclab_pickplace_sac.yaml  isaaclab_pickplace_td3.yaml  obac.yaml  ppo.yaml  sac.yaml  td3.yaml
configs/algo/: example.yaml
configs/backend/: example.yaml
configs/buffer/: example.yaml
configs/env/: example.yaml
configs/eval/: example.yaml
contracts/: README.md
doc/: README.md
docs/: README.md  index.md
evals/: README.md
examples/: README.md
infra/: docker-compose.yml  env.example
render/: __init__.py  renderer.py
scripts/: README.md  run_evals.sh  run_tests.sh  validate_contracts.py  validate_docs.py  validate_runtime_env.py
seenerl/: __init__.py  checkpoint.py  config.py  evaluator.py  logger.py  utils.py
tests/: README.md  conftest.py  test_algorithm_registry.py  test_buffers_batched.py  test_config_normalization.py  test_entrypoint_cli_overrides.py  test_isaaclab_pickplace.py  test_parallel_gym_smoke.py  test_ppo_action_mapping.py  test_ppo_humanoid.py  test_sac_humanoid.py
(+132 files in other folders)
